[ADDED] devices module
