# ApiResources/main.go
@@ -1,14 +1,9 @@
 package main
 
 import (
-
-	users "api_resources/src/Users/infraestructure"
-	Nfc_cards "api_resources/src/Nfc_cards/infraestructure"
-	clients "api_resources/src/clients/infraestructure"
 	event_attendees "api_resources/src/EventAttendees/infraestructure"
-	Events "api_resources/src/Events/infrastructure"
+
 	nfc_assignments "api_resources/src/NfcCardAssignments/infrastructure"
-	
 
 	"time"
 
@@ -16,11 +11,10 @@ import (
 	"github.com/gin-gonic/gin"
 	"github.com/joho/godotenv"
 
-
+	devices "api_resources/src/Devices/infrastructure"
 	events "api_resources/src/Events/infrastructure"
 	users "api_resources/src/Users/infraestructure"
 	clients "api_resources/src/clients/infraestructure"
-
 
 	_ "api_resources/docs" // 👈 Swagger docs
 
@@ -66,15 +60,15 @@ func main() {
 
 	// Rutas principales
 	users.Init(router)
+	devices.Init(router)
 
 	clients.Init(router)
 
 	events.Init(router)
 	event_attendees.Init(router)
-	Events.Init(router)
+
 	nfc_assignments.Init(router)
 	//router.Run(":8080")
-
 
 	// Swagger route
 	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
